Bug 332533 - No way to install theme from disk
Summary: No way to install theme from disk
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-24 23:29 UTC by Sebastian Kügler
Modified: 2014-03-25 21:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kügler 2014-03-24 23:29:33 UTC
Right now, there's only the "download theme" option, but we can't install a theme file from disk.

-> Add button to open and install local file, much like in wallpaper selection dialog

Reproducible: Always

Steps to Reproduce:
1. Open Workspace Appearance | Desktop Theme
2. Look puzzled for a way to install a theme from your disk
3.
Actual Results:  
No such option

Expected Results:  
User should find a button to Open a theme from disk.
Comment 1 Sebastian Kügler 2014-03-24 23:30:16 UTC
As a workaround, themes can be installed from the commandline using:

plasmapkg2 -t theme -i themefile.zip

(For updates, use the -u flag.)
Comment 2 Sebastian Kügler 2014-03-25 03:59:53 UTC
I'm on it.
Comment 3 Sebastian Kügler 2014-03-25 21:42:41 UTC
Git commit 7917d1e0029930b2ec4e8ff4e91ae8bcdecc0b21 by Sebastian Kügler.
Committed on 25/03/2014 at 03:49.
Pushed by sebas into branch 'master'.

Make installation of theme packages work

Hook up q QProcess plasmapkg2 with the file dialog. With this commit, I
can reliably install a theme from the desktop theme KCM.

M  +28   -1    plasma-desktop/kcms/desktoptheme/kcmdesktoptheme.cpp
M  +7    -1    plasma-desktop/kcms/desktoptheme/kcmdesktoptheme.h

http://commits.kde.org/kde-workspace/7917d1e0029930b2ec4e8ff4e91ae8bcdecc0b21
Comment 4 Sebastian Kügler 2014-03-25 21:42:45 UTC
Git commit d8230d5cedc97a48670bacd952172012e22eed22 by Sebastian Kügler.
Committed on 25/03/2014 at 21:37.
Pushed by sebas into branch 'master'.

Error handling for theme installation

The desktoptheme KCM now has a button allowing to install a Plasma theme
from disk.

This patch is the last bit needed in order to install new themes from the
desktoptheme KCM.

M  +29   -19   plasma-desktop/kcms/desktoptheme/DesktopTheme.ui
M  +14   -1    plasma-desktop/kcms/desktoptheme/kcmdesktoptheme.cpp
M  +1    -1    plasma-desktop/kcms/desktoptheme/kcmdesktoptheme.h

http://commits.kde.org/kde-workspace/d8230d5cedc97a48670bacd952172012e22eed22