Make installation of theme packages work

Hook up q QProcess plasmapkg2 with the file dialog. With this commit, I
can reliably install a theme from the desktop theme KCM.

BUG:332533